Add introductory slides

--- a/index.html
+++ b/index.html
@@ -8,16 +8,41 @@
   <body>
     <textarea id="source">
 
-class: center, top
+class: center, middle
+background-color: #E86C2D
 
-# you don't know
-![npm logo](public/img/npm.png)
+# .real-big[Open Open Source]
 
 ---
-class: center, top
+class: center, middle
+background-color: #FFFFFF
 
-## http://bit.ly/npm-i-bkjs
-### (gh-pages: ashleygwilliams/brooklyn-js-npm)
+.fivehundred[![marksandspencer](public/img/marks.jpg)]]
+
+# .black[@mandsdigital]
+---
+
+class: center, middle
+background-color: #FFFFFF
+
+.fivehundred[![hoodie](public/img/hoodie.png)]]
+
+# .black[@hoodiehq]
+---
+class: center, middle
+background-color: #FFFFFF
+
+.fivehundred[![nodejs](public/img/nodejs.png)]]
+
+# .black[@nodejs]
+
+---
+class: center, middle
+background-color: #FFFFFF
+
+.threehundred[![yfpr](public/img/yfpr.png)]]
+
+# .black[@yourfirstpr]
 
 ---
 class: center, top, stats
