Complete Introductory Section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@ background-color: #E86C2D
 
 ---
 class: center, middle
+background-color: #E86C2D
+
+.fivehundred[![Picture of Charlotte Spencer](public/img/itme.png)]
+
+# @charlotteis
+---
+class: center, middle
 background-color: #FFFFFF
 
 .fivehundred[![marksandspencer](public/img/marks.jpg)]]
@@ -45,11 +52,75 @@ background-color: #FFFFFF
 # .black[@yourfirstpr]
 
 ---
-class: center, top, stats
-background-image: url(public/img/pbn_ducks.jpg)
-background-color: #FFE4C4
+class: center, middle, stats
+background-color: #E86C2D
 
-# everyday around 1,800,000 install events occur.
+# software that can be freely used, changed, and shared (in modified or unmodified form) by anyone.
+.citation[http://opensource.org]
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# ~~Open Source~~
+# Door-Sightly-Ajar Source
+
+---
+class: center, top
+background-color: #E86C2D
+
+## Time
+
+---
+class: center, top
+background-color: #E86C2D
+
+## Time
+## Energy
+
+---
+class: center, top
+background-color: #E86C2D
+
+## Time
+## Energy
+## Internet
+
+---
+class: center, top
+background-color: #E86C2D
+
+## Time
+## Energy
+## Internet
+## Little experience of harassment
+
+---
+class: center, top
+background-color: #E86C2D
+
+## Time
+## Energy
+## Internet
+## Little experience of harassment
+## Support from a workplace
+
+---
+class: center, top
+background-color: #E86C2D
+
+## Time
+## Energy
+## Internet
+## Little experience of harassment
+## Support from a workplace
+## A job at all
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# We can make it better
 
 ---
 class: center, top, stats
