Completed Code of Conduct section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,82 @@ background-color: #E86C2D
 # We can make it better
 
 ---
+class: center, middle
+background-color: #E86C2D
+
+# Codes of Conduct
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# What is and isn't, acceptable
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# But, my free speech?
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Not a catch all
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# A pledge, to protect
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Contributor Convenant
+## @coralineada
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Conf Code of Conduct
+## @rem
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Get a Code of Conduct
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Read it first
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Read it first
+# Keep it updated
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Deal with problematic behaviour
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Ashe Dryden's 101 + FAQ
+## bit.ly link here
+
+---
 class: center, top, stats
 background-image: url(public/img/pbn_ducks.jpg)
 background-color: #FFE4C4
