Finished first draft of slides

--- a/index.html
+++ b/index.html
@@ -199,6 +199,211 @@ background-color: #E86C2D
 ## bit.ly link here
 
 ---
+class: center, middle
+background-color: #E86C2D
+
+# Inclusive Language
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Clear wording
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# he/him
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# ~~he/him~~
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# she/her
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# ~~she/her~~
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# they/them
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# hey guys
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# ~~hey guys~~
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# hey everyone!
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Inclusive language Slack Bot
+## hi hi picture
+## bit.ly link
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# simple! easy!
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# ~~simple! easy!~~
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Code isn't important
+## (surprise!)
+
+---
+class: center, top
+background-color: #E86C2D
+
+# Newsletters
+
+---
+class: center, top
+background-color: #E86C2D
+
+# Newsletters
+# Illustrations, graphics
+
+---
+class: center, top
+background-color: #E86C2D
+
+# Newsletters
+# Illustrations, graphics
+# Community moderation
+
+---
+class: center, top
+background-color: #E86C2D
+
+# Newsletters
+# Illustrations, graphics
+# Community moderation
+# Documentation
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Hoodie editorial team
+## bit.ly link goes here
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Community engagement
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Release notes / Blog posts
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Slack / IRC / Gitter
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Twitter
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Private communication
+## (e.g. email)
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Events
+## (e.g. conferences, meet-ups, voip)
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Recognising our limitations
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Recognising our limitations
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Burn out is real
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Forget 24/7 availability
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Hoodie camp image
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# Thanks!
+
+---
+class: center, middle
+background-color: #E86C2D
+
+# bit.ly link to slides
+# bit.ly link to blog post
+
+---
 class: center, top, stats
 background-image: url(public/img/pbn_ducks.jpg)
 background-color: #FFE4C4
