--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@ background-color: #E86C2D
 
 .fivehundred[![Picture of Charlotte Spencer](public/img/itme.png)]
 
-# @charlotteis
+# [@charlotteis](https://twitter.com/charlotteis)
 ---
 class: center, middle
 background-color: #FFFFFF
 
 .fivehundred[![marksandspencer](public/img/marks.jpg)]]
 
-# .black[@mandsdigital]
+# .black[[@mandsdigital](https://twitter.com/mandsdigital)]
 ---
 
 class: center, middle
@@ -34,14 +34,14 @@ background-color: #FFFFFF
 
 .fivehundred[![hoodie](public/img/hoodie.png)]]
 
-# .black[@hoodiehq]
+# .black[[@hoodiehq](https://twitter.com/hoodiehq)]
 ---
 class: center, middle
 background-color: #FFFFFF
 
 .fivehundred[![nodejs](public/img/nodejs.png)]]
 
-# .black[@nodejs]
+# .black[[http://bit.ly/nodeinclusivity](http://bit.ly/nodeinclusivity)]
 
 ---
 class: center, middle
@@ -49,11 +49,11 @@ background-color: #FFFFFF
 
 .threehundred[![yfpr](public/img/yfpr.png)]]
 
-# .black[@yourfirstpr]
+# .black[[@yourfirstpr](https://twitter.com/yourfirstpr)]
 
 ---
 class: center, middle, stats
-background-color: #E86C2D
+background-color: #FFE4C4
 
 # software that can be freely used, changed, and shared (in modified or unmodified form) by anyone.
 .citation[http://opensource.org]
@@ -66,55 +66,44 @@ background-color: #E86C2D
 # Door-Sightly-Ajar Source
 
 ---
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 ## Time
 
 ---
-class: center, top
-background-color: #E86C2D
-
-## Time
-## Energy
-
----
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 ## Time
 ## Energy
-## Internet
 
 ---
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 ## Time
 ## Energy
 ## Internet
-## Little experience of harassment
 
 ---
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 ## Time
 ## Energy
 ## Internet
 ## Little experience of harassment
-## Support from a workplace
 
 ---
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 ## Time
 ## Energy
 ## Internet
 ## Little experience of harassment
-## Support from a workplace
-## A job at all
+## Employment
 
 ---
 class: center, middle
@@ -126,7 +115,7 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# Codes of Conduct
+# .real-big[Codes of Conduct]
 
 ---
 class: center, middle
@@ -157,14 +146,14 @@ class: center, middle
 background-color: #E86C2D
 
 # Contributor Convenant
-## @coralineada
+## [http://bit.ly/contributorcoc](http://bit.ly/contributorcoc)
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # Conf Code of Conduct
-## @rem
+## [http://bit.ly/confcoc](http://bit.ly/confcoc)
 
 ---
 class: center, middle
@@ -173,14 +162,14 @@ background-color: #E86C2D
 # Get a Code of Conduct
 
 ---
-class: center, middle
-background-color: #E86C2D
+class: center, middle, stats
+background-color: #FFE4C4
 
 # Read it first
 
 ---
-class: center, middle
-background-color: #E86C2D
+class: center, middle, stats
+background-color: #FFE4C4
 
 # Read it first
 # Keep it updated
@@ -196,13 +185,13 @@ class: center, middle
 background-color: #E86C2D
 
 # Ashe Dryden's 101 + FAQ
-## bit.ly link here
+## [http://bit.ly/coc101faq](http://bit.ly/coc101faq)
 
 ---
 class: center, middle
 background-color: #E86C2D
 
-# Inclusive Language
+# .real-big[Inclusive Language]
 
 ---
 class: center, middle
@@ -264,7 +253,7 @@ background-color: #E86C2D
 
 # Inclusive language Slack Bot
 ## hi hi picture
-## bit.ly link
+## [http://bit.ly/inclusivebot](http://bit.ly/inclusivebot)
 
 ---
 class: center, middle
@@ -282,33 +271,33 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# Code isn't important
-## (surprise!)
+# .real-big[Code isn't important]
+# (surprise!)
 
 ---
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 # Newsletters
 
 ---
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 # Newsletters
 # Illustrations, graphics
 
 ---
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 # Newsletters
 # Illustrations, graphics
 # Community moderation
 
 ---
-class: center, top
-background-color: #E86C2D
+class: center, top, stats
+background-color: #FFE4C4
 
 # Newsletters
 # Illustrations, graphics
@@ -320,13 +309,13 @@ class: center, middle
 background-color: #E86C2D
 
 # Hoodie editorial team
-## bit.ly link goes here
+## [http://bit.ly/hoodieeditorial](http://bit.ly/hoodieeditorial)
 
 ---
 class: center, middle
 background-color: #E86C2D
 
-# Community engagement
+# .real-big[Community engagement]
 
 ---
 class: center, middle
@@ -364,13 +353,7 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# Recognising our limitations
-
----
-class: center, middle
-background-color: #E86C2D
-
-# Recognising our limitations
+# .real-big[Recognising our limitations]
 
 ---
 class: center, middle
@@ -394,14 +377,14 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# Thanks!
+# .real-big[Thanks!]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # bit.ly link to slides
-# bit.ly link to blog post
+# [http://bit.ly/openopentalk](http://bit.ly/openopentalk)
 
 ---
 class: center, top, stats
