--- a/index.html
+++ b/index.html
@@ -62,8 +62,14 @@ background-color: #FFE4C4
 class: center, middle
 background-color: #E86C2D
 
+# Open Source
+
+---
+class: center, middle
+background-color: #E86C2D
+
 # ~~Open Source~~
-# Door-Sightly-Ajar Source
+# Door-sightly-ajar Source
 
 ---
 class: center, top, stats
@@ -116,7 +122,7 @@ class: center, middle
 background-color: #E86C2D
 
 # .real-big[Codes of Conduct]
-
+# 📝📝📝
 ---
 class: center, middle
 background-color: #E86C2D
@@ -192,15 +198,16 @@ class: center, middle
 background-color: #E86C2D
 
 # .real-big[READMEs]
+# 📓📓📓
 
 ---
 class: center, middle
 background-color: #E86C2D
 
-# <u>Unicorn.js</u>
+# <u>🦄 Unicorn.js 🦄</u>
 ## Install node.js
 ## `> npm install unicorn`
-## `> unicorn ride`
+## `> unicorn ride `
 
 ---
 class: center, top, stats
@@ -277,6 +284,7 @@ class: center, middle
 background-color: #E86C2D
 
 # .real-big[Project Issues]
+# 💻💻💻
 
 ---
 class: center, middle
@@ -303,6 +311,7 @@ class: center, middle
 background-color: #E86C2D
 
 # .real-big[Inclusive Language]
+# 💬💬💬
 
 ---
 class: center, middle
@@ -383,7 +392,7 @@ class: center, middle
 background-color: #E86C2D
 
 # .real-big[Code isn't important]
-# (surprise!)
+# 🎉🎉🎉
 
 ---
 class: center, top, stats
@@ -427,6 +436,7 @@ class: center, middle
 background-color: #E86C2D
 
 # .real-big[Recognising our limitations]
+# 💆🏽💆🏽💆🏽
 
 ---
 class: center, middle
@@ -450,14 +460,15 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# .real-big[Thanks!]
+# bit.ly link to slides
+# [http://bit.ly/openopentalk](http://bit.ly/openopentalk)
 
 ---
 class: center, middle
 background-color: #E86C2D
 
-# bit.ly link to slides
-# [http://bit.ly/openopentalk](http://bit.ly/openopentalk)
+# .real-big[Thanks!]
+# 💖💖💖
   </textarea>
     <script src="public/remark.js" type="text/javascript">
     </script>
