--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# Hoodie Issue Picture
+.issue[![Hoodie Issue](public/img/issue.png)]
 
 ---
 class: center, middle
@@ -454,13 +454,13 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# Hoodie camp image
+# .camp[![Hoodie Camp Illustration](public/img/camp.png)]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
-# bit.ly link to slides
+# bit.ly link to blogpost
 # [http://bit.ly/openopentalk](http://bit.ly/openopentalk)
 
 ---
