--- a/index.html
+++ b/index.html
@@ -372,20 +372,20 @@ class: center, middle
 background-color: #E86C2D
 
 # Inclusive language Slack Bot
-## hi hi picture
+## .camp[![Image of Slack Bot](public/img/guys.png)]
 ## [http://bit.ly/inclusivebot](http://bit.ly/inclusivebot)
 
 ---
 class: center, middle
 background-color: #E86C2D
 
-# simple! easy!
+# simple! easy! just!
 
 ---
 class: center, middle
 background-color: #E86C2D
 
-# ~~simple! easy!~~
+# ~~simple! easy! just!~~
 
 ---
 class: center, middle
@@ -460,7 +460,7 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# bit.ly link to blogpost
+# [http://bit.ly/openopenblog](http://bit.ly/openopenblog)
 # [http://bit.ly/openopentalk](http://bit.ly/openopentalk)
 
 ---
