--- a/index.html
+++ b/index.html
@@ -59,19 +59,6 @@ background-color: #FFE4C4
 .citation[http://opensource.org]
 
 ---
-class: center, middle
-background-color: #E86C2D
-
-# Open Source
-
----
-class: center, middle
-background-color: #E86C2D
-
-# ~~Open Source~~
-# Door-sightly-ajar Source
-
----
 class: center, top, stats
 background-color: #FFE4C4
 
@@ -376,18 +363,7 @@ background-color: #E86C2D
 ## [http://bit.ly/inclusivebot](http://bit.ly/inclusivebot)
 
 ---
-class: center, middle
-background-color: #E86C2D
 
-# simple! easy! just!
-
----
-class: center, middle
-background-color: #E86C2D
-
-# ~~simple! easy! just!~~
-
----
 class: center, middle
 background-color: #E86C2D
 
@@ -435,7 +411,7 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-# .real-big[Recognising our limitations]
+# .real-big[You are important]
 # 💆🏽💆🏽💆🏽
 
 ---
@@ -445,12 +421,7 @@ background-color: #E86C2D
 # Burn out is real
 
 ---
-class: center, middle
-background-color: #E86C2D
 
-# Forget 24/7 availability
-
----
 class: center, middle
 background-color: #E86C2D
 
