--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>the ag_deck</title>
+    <title>Open Open Source</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="public/custom.css" type="text/css" rel="stylesheet">
   </head>
