--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ background-color: #E86C2D
 
 # .real-big[Open Open Source]
 
+.twitter[@charlotteis]
 ---
 class: center, middle
 background-color: #E86C2D
@@ -20,6 +21,8 @@ background-color: #E86C2D
 .fivehundred[![Picture of Charlotte Spencer](public/img/itme.png)]
 
 # [@charlotteis](https://twitter.com/charlotteis)
+.twitter[@charlotteis]
+
 ---
 class: center, middle
 background-color: #FFFFFF
@@ -27,6 +30,8 @@ background-color: #FFFFFF
 .fivehundred[![marksandspencer](public/img/marks.jpg)]]
 
 # .black[[@mandsdigital](https://twitter.com/mandsdigital)]
+.twitter[@charlotteis]
+
 ---
 
 class: center, middle
@@ -35,6 +40,8 @@ background-color: #FFFFFF
 .fivehundred[![hoodie](public/img/hoodie.png)]]
 
 # .black[[@hoodiehq](https://twitter.com/hoodiehq)]
+.twitter[@charlotteis]
+
 ---
 class: center, middle
 background-color: #FFFFFF
@@ -42,6 +49,7 @@ background-color: #FFFFFF
 .fivehundred[![nodejs](public/img/nodejs.png)]]
 
 # .black[[http://bit.ly/nodeinclusivity](http://bit.ly/nodeinclusivity)]
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -50,19 +58,21 @@ background-color: #FFFFFF
 .threehundred[![yfpr](public/img/yfpr.png)]]
 
 # .black[[@yourfirstpr](https://twitter.com/yourfirstpr)]
+.twitter[@charlotteis]
 
 ---
 class: center, middle, stats
 background-color: #FFE4C4
 
 # software that can be freely used, changed, and shared (in modified or unmodified form) by anyone.
-.citation[http://opensource.org]
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
 background-color: #FFE4C4
 
 ## Time
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -70,6 +80,7 @@ background-color: #FFE4C4
 
 ## Time
 ## Energy
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -78,6 +89,7 @@ background-color: #FFE4C4
 ## Time
 ## Energy
 ## Internet
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -87,6 +99,7 @@ background-color: #FFE4C4
 ## Energy
 ## Internet
 ## Little experience of harassment
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -97,12 +110,14 @@ background-color: #FFE4C4
 ## Internet
 ## Little experience of harassment
 ## Employment
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # We can make it better
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -110,29 +125,35 @@ background-color: #E86C2D
 
 # .real-big[Codes of Conduct]
 # 📝📝📝
+.twitter[@charlotteis]
+
 ---
 class: center, middle
 background-color: #E86C2D
 
 # What is and isn't, acceptable
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # But, my free speech?
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # Not a catch all
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # A pledge, to protect
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -140,6 +161,7 @@ background-color: #E86C2D
 
 # Contributor Convenant
 ## [http://bit.ly/contributorcoc](http://bit.ly/contributorcoc)
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -147,18 +169,21 @@ background-color: #E86C2D
 
 # Conf Code of Conduct
 ## [http://bit.ly/confcoc](http://bit.ly/confcoc)
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # Get a Code of Conduct
+.twitter[@charlotteis]
 
 ---
 class: center, middle, stats
 background-color: #FFE4C4
 
 # Read it first
+.twitter[@charlotteis]
 
 ---
 class: center, middle, stats
@@ -166,12 +191,14 @@ background-color: #FFE4C4
 
 # Read it first
 # Keep it updated
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # Deal with problematic behaviour
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -179,6 +206,7 @@ background-color: #E86C2D
 
 # Ashe Dryden's 101 + FAQ
 ## [http://bit.ly/coc101faq](http://bit.ly/coc101faq)
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -186,6 +214,7 @@ background-color: #E86C2D
 
 # .real-big[READMEs]
 # 📓📓📓
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -195,12 +224,14 @@ background-color: #E86C2D
 ## Install node.js
 ## `> npm install unicorn`
 ## `> unicorn ride `
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
 background-color: #FFE4C4
 
 ## Title of project
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -208,6 +239,7 @@ background-color: #FFE4C4
 
 ## Title of project
 ## Short description
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -216,6 +248,7 @@ background-color: #FFE4C4
 ## Title of project
 ## Short description
 ## Link to CoC
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -225,6 +258,7 @@ background-color: #FFE4C4
 ## Short description
 ## Link to CoC
 ## How to install and use it
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -235,12 +269,14 @@ background-color: #FFE4C4
 ## Link to CoC
 ## How to install and use it
 ## Link to tutorials
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
 background-color: #FFE4C4
 
 ## Where to go for help
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -248,6 +284,7 @@ background-color: #FFE4C4
 
 ## Where to go for help
 ## How to file an issue
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -256,6 +293,7 @@ background-color: #FFE4C4
 ## Where to go for help
 ## How to file an issue
 ## Things you want help on
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -265,6 +303,7 @@ background-color: #FFE4C4
 ## How to file an issue
 ## Things you want help on
 ## How to get in touch
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -272,6 +311,7 @@ background-color: #E86C2D
 
 # .real-big[Project Issues]
 # 💻💻💻
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -279,6 +319,7 @@ background-color: #E86C2D
 
 # Your First PR
 # [@yourfirstpr](https://twitter.com/yourfirstpr)
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -286,12 +327,14 @@ background-color: #E86C2D
 
 # Open Source =
 # a great place to learn
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 .issue[![Hoodie Issue](public/img/issue.png)]
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -299,60 +342,70 @@ background-color: #E86C2D
 
 # .real-big[Inclusive Language]
 # 💬💬💬
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # Clear wording
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # he/him
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # ~~he/him~~
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # she/her
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # ~~she/her~~
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # they/them
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # hey guys
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # ~~hey guys~~
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # hey everyone!
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -361,6 +414,7 @@ background-color: #E86C2D
 # Inclusive language Slack Bot
 ## .camp[![Image of Slack Bot](public/img/guys.png)]
 ## [http://bit.ly/inclusivebot](http://bit.ly/inclusivebot)
+.twitter[@charlotteis]
 
 ---
 
@@ -369,12 +423,14 @@ background-color: #E86C2D
 
 # .real-big[Code isn't important]
 # 🎉🎉🎉
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
 background-color: #FFE4C4
 
 # Newsletters
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -382,6 +438,7 @@ background-color: #FFE4C4
 
 # Newsletters
 # Illustrations, graphics
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -390,6 +447,7 @@ background-color: #FFE4C4
 # Newsletters
 # Illustrations, graphics
 # Community moderation
+.twitter[@charlotteis]
 
 ---
 class: center, top, stats
@@ -399,6 +457,7 @@ background-color: #FFE4C4
 # Illustrations, graphics
 # Community moderation
 # Documentation
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -406,6 +465,7 @@ background-color: #E86C2D
 
 # Hoodie editorial team
 ## [http://bit.ly/hoodieeditorial](http://bit.ly/hoodieeditorial)
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -413,12 +473,14 @@ background-color: #E86C2D
 
 # .real-big[You are important]
 # 💆🏽💆🏽💆🏽
+.twitter[@charlotteis]
 
 ---
 class: center, middle
 background-color: #E86C2D
 
 # Burn out is real
+.twitter[@charlotteis]
 
 ---
 
@@ -426,6 +488,7 @@ class: center, middle
 background-color: #E86C2D
 
 # .camp[![Hoodie Camp Illustration](public/img/camp.png)]
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -433,6 +496,7 @@ background-color: #E86C2D
 
 # [http://bit.ly/openopenblog](http://bit.ly/openopenblog)
 # [http://bit.ly/openopentalk](http://bit.ly/openopentalk)
+.twitter[@charlotteis]
 
 ---
 class: center, middle
@@ -440,11 +504,15 @@ background-color: #E86C2D
 
 # .real-big[Thanks!]
 # 💖💖💖
+.twitter[@charlotteis]
+
   </textarea>
     <script src="public/remark.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-      var slideshow = remark.create();
+      var slideshow = remark.create({
+        ratio: '16:9'
+      });
     </script>
   </body>
 </html>
