feat: updates for desk beers

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Open Open Source</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="public/custom.css" type="text/css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <textarea id="source">
@@ -18,7 +19,7 @@ background-color: #E86C2D
 class: center, middle
 background-color: #E86C2D
 
-.fivehundred[![Picture of Charlotte Spencer](public/img/itme.png)]
+.fivehundred[![Picture of Charlotte Spencer](public/img/mood.gif)]
 
 # [@charlotteis](https://twitter.com/charlotteis)
 .twitter[@charlotteis]
@@ -46,9 +47,9 @@ background-color: #FFFFFF
 class: center, middle
 background-color: #FFFFFF
 
-.fivehundred[![nodejs](public/img/nodejs.png)]]
+.together[Node Together]
 
-# .black[[http://bit.ly/nodeinclusivity](http://bit.ly/nodeinclusivity)]
+# .black[[@node_together](https://twitter.com/node_together)]
 .twitter[@charlotteis]
 
 ---
