feat: update colour scheme

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <textarea id="source">
 
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .real-big[Open Open Source]
 
 .twitter[@charlotteis]
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 .fivehundred[![Picture of Charlotte Spencer](public/img/mood.gif)]
 
@@ -63,21 +63,21 @@ background-color: #FFFFFF
 
 ---
 class: center, middle, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 # software that can be freely used, changed, and shared (in modified or unmodified form) by anyone.
 .twitter[@charlotteis]
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Time
 .twitter[@charlotteis]
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Time
 ## Energy
@@ -85,7 +85,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Time
 ## Energy
@@ -94,7 +94,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Time
 ## Energy
@@ -104,7 +104,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Time
 ## Energy
@@ -115,14 +115,14 @@ background-color: #FFE4C4
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # We can make it better
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .real-big[Codes of Conduct]
 # 📝📝📝
@@ -130,35 +130,35 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # What is and isn't, acceptable
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # But, my free speech?
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Not a catch all
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # A pledge, to protect
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Contributor Convenant
 ## [http://bit.ly/contributorcoc](http://bit.ly/contributorcoc)
@@ -166,7 +166,7 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Conf Code of Conduct
 ## [http://bit.ly/confcoc](http://bit.ly/confcoc)
@@ -174,21 +174,21 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Get a Code of Conduct
 .twitter[@charlotteis]
 
 ---
 class: center, middle, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 # Read it first
 .twitter[@charlotteis]
 
 ---
 class: center, middle, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 # Read it first
 # Keep it updated
@@ -196,14 +196,14 @@ background-color: #FFE4C4
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Deal with problematic behaviour
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Ashe Dryden's 101 + FAQ
 ## [http://bit.ly/coc101faq](http://bit.ly/coc101faq)
@@ -211,7 +211,7 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .real-big[READMEs]
 # 📓📓📓
@@ -219,7 +219,7 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # <u>🦄 Unicorn.js 🦄</u>
 ## Install node.js
@@ -229,14 +229,14 @@ background-color: #E86C2D
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Title of project
 .twitter[@charlotteis]
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Title of project
 ## Short description
@@ -244,7 +244,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Title of project
 ## Short description
@@ -253,7 +253,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Title of project
 ## Short description
@@ -263,7 +263,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Title of project
 ## Short description
@@ -274,14 +274,14 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Where to go for help
 .twitter[@charlotteis]
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Where to go for help
 ## How to file an issue
@@ -289,7 +289,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Where to go for help
 ## How to file an issue
@@ -298,7 +298,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 ## Where to go for help
 ## How to file an issue
@@ -308,7 +308,7 @@ background-color: #FFE4C4
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .real-big[Project Issues]
 # 💻💻💻
@@ -316,7 +316,7 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Your First PR
 # [@yourfirstpr](https://twitter.com/yourfirstpr)
@@ -324,7 +324,7 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Open Source =
 # a great place to learn
@@ -332,14 +332,14 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 .issue[![Hoodie Issue](public/img/issue.png)]
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .real-big[Inclusive Language]
 # 💬💬💬
@@ -347,70 +347,70 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Clear wording
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # he/him
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # ~~he/him~~
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # she/her
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # ~~she/her~~
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # they/them
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # hey guys
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # ~~hey guys~~
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # hey everyone!
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Inclusive language Slack Bot
 ## .camp[![Image of Slack Bot](public/img/guys.png)]
@@ -420,7 +420,7 @@ background-color: #E86C2D
 ---
 
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .real-big[Code isn't important]
 # 🎉🎉🎉
@@ -428,14 +428,14 @@ background-color: #E86C2D
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 # Newsletters
 .twitter[@charlotteis]
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 # Newsletters
 # Illustrations, graphics
@@ -443,7 +443,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 # Newsletters
 # Illustrations, graphics
@@ -452,7 +452,7 @@ background-color: #FFE4C4
 
 ---
 class: center, top, stats
-background-color: #FFE4C4
+background-color: #e5dadc
 
 # Newsletters
 # Illustrations, graphics
@@ -462,7 +462,7 @@ background-color: #FFE4C4
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Hoodie editorial team
 ## [http://bit.ly/hoodieeditorial](http://bit.ly/hoodieeditorial)
@@ -470,7 +470,7 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .real-big[You are important]
 # 💆🏽💆🏽💆🏽
@@ -478,7 +478,7 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # Burn out is real
 .twitter[@charlotteis]
@@ -486,14 +486,14 @@ background-color: #E86C2D
 ---
 
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .camp[![Hoodie Camp Illustration](public/img/camp.png)]
 .twitter[@charlotteis]
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # [http://bit.ly/openopenblog](http://bit.ly/openopenblog)
 # [http://bit.ly/openopentalk](http://bit.ly/openopentalk)
@@ -501,7 +501,7 @@ background-color: #E86C2D
 
 ---
 class: center, middle
-background-color: #E86C2D
+background-color: #263238
 
 # .real-big[Thanks!]
 # 💖💖💖
