feat: add not funny bit bout german

--- a/index.html
+++ b/index.html
@@ -15,6 +15,48 @@ background-color: #263238
 # .real-big[Open Open Source]
 
 .twitter[@charlotteis]
+
+---
+class: center, middle
+background-color: #FFFFFF
+
+.fivehundred[![German Fluency](public/img/duo.png)]]
+
+.twitter[@charlotteis]
+
+---
+class: center, middle
+background-color: #FFFFFF
+
+.fivehundred[![Lies](public/img/duo-lies.png)]]
+
+.twitter[@charlotteis]
+
+---
+class: center, middle, stats
+background-color: #e5dadc
+
+# Ich bin ein klein Junge
+# (I am a small boy)
+.twitter[@charlotteis]
+
+---
+class: center, middle, stats
+background-color: #e5dadc
+
+# Ich bin eine Kartoffel
+# (I am a potato)
+.twitter[@charlotteis]
+
+---
+class: center, middle
+background-color: #263238
+
+# .real-big[Willkommen!]
+# .real-big[Open Open Source]
+
+.twitter[@charlotteis]
+
 ---
 class: center, middle
 background-color: #263238
@@ -34,7 +76,6 @@ background-color: #FFFFFF
 .twitter[@charlotteis]
 
 ---
-
 class: center, middle
 background-color: #FFFFFF
 
