Add enforcement notes and updates

--- a/index.html
+++ b/index.html
@@ -246,6 +246,37 @@ background-color: #263238
 class: center, middle
 background-color: #263238
 
+# [http://wealljs.org/enforcement](http://wealljs.org/enforcement)
+.twitter[@charlotteis]
+
+---
+class: center, middle, stats
+background-color: #e5dadc
+
+## We all mess up
+.twitter[@charlotteis]
+
+---
+class: center, middle, stats
+background-color: #e5dadc
+
+## We all mess up
+## The safety of the hurt takes priority
+.twitter[@charlotteis]
+
+---
+class: center, middle, stats
+background-color: #e5dadc
+
+## We all mess up
+## The safety of the hurt takes priority
+## We promise support, not safety
+.twitter[@charlotteis]
+
+---
+class: center, middle
+background-color: #263238
+
 # Ashe Dryden's 101 + FAQ
 ## [http://bit.ly/coc101faq](http://bit.ly/coc101faq)
 .twitter[@charlotteis]
@@ -334,6 +365,16 @@ background-color: #e5dadc
 
 ## Where to go for help
 ## How to file an issue
+## How to file a security issue
+.twitter[@charlotteis]
+
+---
+class: center, top, stats
+background-color: #e5dadc
+
+## Where to go for help
+## How to file an issue
+## How to file a security issue
 ## Things you want help on
 .twitter[@charlotteis]
 
@@ -343,6 +384,7 @@ background-color: #e5dadc
 
 ## Where to go for help
 ## How to file an issue
+## How to file a security issue
 ## Things you want help on
 ## How to get in touch
 .twitter[@charlotteis]
@@ -544,7 +586,7 @@ background-color: #263238
 class: center, middle
 background-color: #263238
 
-# .real-big[Thanks!]
+# .real-big[Danke!]
 # 💖💖💖
 .twitter[@charlotteis]
 
