fix: correct little boy grammar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ background-color: #FFFFFF
 class: center, middle, stats
 background-color: #e5dadc
 
-# Ich bin ein klein Junge
+# Ich bin ein kleiner Junge
 # (I am a small boy)
 .twitter[@charlotteis]
 
