feat: updates for clsxeurope

--- a/index.html
+++ b/index.html
@@ -18,61 +18,11 @@ background-color: #263238
 
 ---
 class: center, middle
-background-color: #FFFFFF
-
-.fivehundred[![German Fluency](public/img/duo.png)]]
-
-.twitter[@charlotteis]
-
----
-class: center, middle
-background-color: #FFFFFF
-
-.fivehundred[![Lies](public/img/duo-lies.png)]]
-
-.twitter[@charlotteis]
-
----
-class: center, middle, stats
-background-color: #e5dadc
-
-# Ich bin ein kleiner Junge
-# (I am a small boy)
-.twitter[@charlotteis]
-
----
-class: center, middle, stats
-background-color: #e5dadc
-
-# Ich bin eine Kartoffel
-# (I am a potato)
-.twitter[@charlotteis]
-
----
-class: center, middle
-background-color: #263238
-
-# .real-big[Willkommen!]
-# .real-big[Open Open Source]
-
-.twitter[@charlotteis]
-
----
-class: center, middle
 background-color: #263238
 
 .fivehundred[![Picture of Charlotte Spencer](public/img/mood.gif)]
 
 # [@charlotteis](https://twitter.com/charlotteis)
-.twitter[@charlotteis]
-
----
-class: center, middle
-background-color: #FFFFFF
-
-.fivehundred[![marksandspencer](public/img/marks.jpg)]]
-
-# .black[[@mandsdigital](https://twitter.com/mandsdigital)]
 .twitter[@charlotteis]
 
 ---
@@ -409,8 +359,7 @@ background-color: #263238
 class: center, middle
 background-color: #263238
 
-# Open Source =
-# a great place to learn
+# Open Source === a great place to learn
 .twitter[@charlotteis]
 
 ---
@@ -495,9 +444,17 @@ background-color: #263238
 class: center, middle
 background-color: #263238
 
-# Inclusive language Slack Bot
-## .camp[![Image of Slack Bot](public/img/guys.png)]
+# Inclusive language Slackbot
+## .camp[![Image of Slackbot](public/img/guys.png)]
 ## [http://bit.ly/inclusivebot](http://bit.ly/inclusivebot)
+.twitter[@charlotteis]
+
+---
+class: center, middle
+background-color: #263238
+
+## .fourhundred[![WeAllJS Slackbot](public/img/crazy.png)]
+## [http://wealljs.org/](http://wealljs.org/)
 .twitter[@charlotteis]
 
 ---
@@ -586,7 +543,7 @@ background-color: #263238
 class: center, middle
 background-color: #263238
 
-# .real-big[Danke!]
+# .real-big[Thanks!]
 # 💖💖💖
 .twitter[@charlotteis]
 
